--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+streamlit==1.25.0
+pymupdf==1.22.5
 pdfplumber==0.11.0
 pandas==1.5.3
 nltk==3.9.1
 scikit-learn==1.2.2
-pymupdf==1.22.5
 python-dotenv==1.0.1
